--- a/index.html
+++ b/index.html
@@ -7,38 +7,37 @@
 <body>
     <h1>My Resume</h1>
     <img src="./image/programming-background-collage.jpg" width="100" alt="image web dev">
-    <ul>
-        <li><h2>Summary</h2> objective statement </li> <hr />
-        <li><h2>Education</h2></li>
+        <h2>Summary</h2> objective statement  <hr />
+        <h2>Education</h2>
         <ul>
             <li>(list degrees, schools, and dates)</li>
             <li>(list degrees, schools, and dates)</li>
             <li>(list degrees, schools, and dates)</li>
         </ul> <hr />
-        <li><h2>Work experience</h2></li>
+        <h2>Work experience</h2>
         <ul>
             <li>(list job titles, employers, dates, and responsibilities)</li>
             <li>(list job titles, employers, dates, and responsibilities)</li>
             <li>(list job titles, employers, dates, and responsibilities)</li>
         </ul> <hr />
-        <li><h2>Skills</h2></li>
+        <h2>Skills</h2>
         <ul>
             <li>(list relevant skills or areas of expertise)</li>
             <li>(list relevant skills or areas of expertise)</li>
             <li>(list relevant skills or areas of expertise)</li>
         </ul> <hr />
-        <li><h2>Awards and certifications</h2></li>
+        <h2>Awards and certifications</h2>
         <ul>
             <li>(list any relevant awards, certifications, or other accomplishments)</li>
         </ul> <hr />
-        <li><h2>Other</h2></li>
+        <h2>Other</h2>
         <ul>
             <li><a href="./My Hobbies.html">My Hobbies</a></li>
             <li><a href="./Contact Me.html">Contact Me</a></li>
         </ul>
-    <ul/>
     <footer>
         <p>© Khalil BEN JILANI. All rights reserved.</p>
       </footer>
 </body>
+</html>
 </html>
